--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -36,7 +36,7 @@ startsecs = 10
 directory = /app
 command = /usr/local/bundle/bin/bundle exec sidekiq
 user = pompa
-environment = HOME="/app",USER="pompa",RUBYOPT=""
+environment = HOME="/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=30
 stdout_logfile = /dev/docker-stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/docker-stderr
