--- a/facade/nginx/nginx.conf.template
+++ b/facade/nginx/nginx.conf.template
@@ -211,7 +211,10 @@ http {
             proxy_busy_buffers_size 64k;
 
             proxy_cache public_cache;
-            proxy_cache_key "$uri?$args";
+            proxy_cache_key "$uri$is_args$args";
+
+            proxy_no_cache $arg_v $arg_g;
+            proxy_cache_bypass $arg_v $arg_g;
 
             proxy_pass http://pompa-public-api;
         }
