--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,6 @@ steps:
       POMPA_CD_DEPLOY_KEY:
         from_secret: pompa_cd_deploy_key
     commands:
-      - export SHORT_COMMIT="$(echo $DRONE_COMMIT | cut -c1-7)"
       - mkdir -p ~/.ssh
       - echo -ne "$POMPA_CD_DEPLOY_KEY" > ~/.ssh/id_rsa
       - ssh-keyscan -H github.com > ~/.ssh/known_hosts
@@ -23,17 +22,10 @@ steps:
       - git init
       - git config user.email "drone@nalewajski.pl"
       - git config user.name "Drone CI"
-      - git config merge.ours.driver true
       - git remote add origin git@github.com:m1nl/pompa-cd.git
       - git remote add upstream https://github.com/m1nl/pompa-docker.git
-      - git fetch origin
-      - git fetch upstream
+      - git fetch origin master
+      - git fetch upstream master
       - git checkout -b master --track origin/master
-      - git checkout -b upstream --track upstream/master
-      - git checkout master
-      - git checkout --theirs upstream -- facade/pompa
-      - git checkout --theirs upstream -- app/pompa-api
-      - git commit --allow-empty -m "$DRONE_COMMIT_MESSAGE"
-      - git merge --squash --strategy=recursive --strategy-option=theirs upstream
-      - git commit --allow-empty --amend --no-edit
-      - git push origin master
+      - git pull upstream --rebase
+      - git push origin master --force
