--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -21,7 +21,7 @@ serverurl = unix:///run/supervisord.sock
 
 [program:puma]
 directory = /app
-command = /usr/local/bundle/bin/bundle exec puma --preload -b tcp://0.0.0.0:3000 -b unix://tmp/sockets/puma.sock
+command = bundle exec puma --preload -b tcp://0.0.0.0:3000 -b unix://tmp/sockets/puma.sock
 user = pompa
 environment = HOME="/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
 stdout_logfile = /dev/docker-stdout
@@ -34,7 +34,7 @@ startsecs = 10
 
 [program:sidekiq]
 directory = /app
-command = /usr/local/bundle/bin/bundle exec sidekiq
+command = bundle exec sidekiq
 user = pompa
 environment = HOME="/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=30
 stdout_logfile = /dev/docker-stdout
@@ -47,7 +47,7 @@ startsecs = 10
 
 [program:model-sync]
 directory = /app
-command = /app/bin/model-sync
+command = bundle exec bin/model-sync
 user = pompa
 environment = HOME="/app",USER="pompa",RUBYOPT=""
 stdout_logfile = /dev/docker-stdout
